--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<html lang="en">
+<head>
+  </head>
+<body>
 <table>
 <thead>
 <tr>
@@ -10654,3 +10658,4 @@
 </tr>
 </tbody>
 </table>
+  </body></html>
