--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html lang="en">
 <head>
+<style>body {
+   color: black;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+
+table {
+  border-collapse: collapse;
+}</style>
   </head>
 <body>
 <table>
